# scpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.zh.md
applications/httpserver/: CMakeLists.txt  httpserver.scpp  main.scpp
applications/httpserver/api/: httpserver_api.scpp
applications/httpserver/platform/: httpserver_platform.scpp  scpp_httpserver_platform.cpp
applications/httpserver/runtime/: httpserver_runtime.scpp
applications/httpserver/site/: build_site.sh  build_site_for_docker.sh
applications/httpserver/testdata/: index.html  sitemap.xml
applications/httpserver/tests/: httpserver_test.cpp
blackbox_test/: .gitignore  CMakeLists.txt  README.md  README.zh.md  run_tests.cpp
blackbox_test/cases/01_basics/: break_and_continue_in_while_loop.scpp  calling_function_defined_later_in_file.cpp  checking_is_unconditional_by_default_no_annotation_needed.scpp  function_call_with_params.scpp  local_variable_definitions_accept_brace_direct_and_copy_initializers.scpp  nested_break_and_continue_in_while_loops.scpp  nested_ternary_expression_is_allowed.scpp  non_extern_forward_declarations_enable_mutual_recursion.scpp  self_recursion.scpp  ternary_expression_in_assignment_return_and_argument.scpp  unassigned_locals_are_zero_initialized.scpp
blackbox_test/cases/02_structs/: nested_struct_field_access.scpp  struct_array_field.scpp  struct_assignment_is_bitwise_copy_not_aliasing.scpp  struct_base_clause_is_rejected.scpp  struct_converting_ctor_call_argument_by_value_original_crash_regression.scpp  struct_converting_ctor_call_argument_const_ref_materializes_temporary.scpp  struct_default_brace_init_prefers_default_constructor_when_available.scpp  struct_forbidden_reference_field_is_rejected.cpp  struct_forbidden_unique_ptr_field_is_rejected.scpp  struct_interface_attribute_is_rejected.scpp  struct_is_zero_initialized_by_default.scpp  struct_multiple_access_specifier_sections_mix_fields_constructors_and_methods.scpp  struct_nonvirtual_methods_including_const_are_callable.scpp  struct_parameterized_constructor_and_nonvirtual_methods_work.scpp  struct_parameterized_constructor_only_rejects_default_brace_init.scpp  struct_parameterized_constructor_only_rejects_default_brace_init.stderr  struct_raw_pointer_field_dereferenced_via_unsafe.cpp  struct_raw_pointer_field_dereferenced_via_unsafe.scpp  struct_virtual_method_declaration_is_rejected.scpp  trivial_struct_field_read_write.scpp
blackbox_test/cases/03_unique_ptr/: arrow_operator_on_struct_pointee.cpp  arrow_operator_on_struct_pointee.scpp  bare_move_result_must_be_stored_is_rejected.scpp  double_move_is_rejected.scpp  make_unique_and_dereference.cpp  make_unique_and_dereference.scpp  make_unique_zero_args_zero_initializes.scpp  move_transfers_ownership.scpp  moving_unique_ptr_while_its_pointee_is_borrowed_is_rejected.scpp  passing_factory_function_result_directly_as_argument_is_allowed.scpp  reassignment_after_move_is_allowed.scpp  returning_unique_ptr_and_binding_to_new_local_is_allowed.scpp  use_after_move_is_rejected.scpp
blackbox_test/cases/04_references_borrow/: borrow_conflict_is_rejected_even_inside_unsafe_block.scpp  borrow_released_after_last_use_permits_direct_write.scpp  borrowing_fields_of_two_different_structs_is_allowed.scpp  const_qualified_local_variable_is_allowed.scpp  const_qualified_local_variable_is_not_yet_supported.scpp  const_reference_parameter_binding_to_a_literal_is_allowed.scpp  const_reference_parameter_binding_to_a_literal_is_not_yet_supported.scpp  function_returning_reference_via_elided_single_parameter.scpp  function_returning_reference_with_no_reference_parameter_is_rejected.scpp  mutable_reference_parameter_write_is_allowed.cpp  mutable_reference_parameter_write_is_allowed.scpp  mutable_reference_write_through.cpp  mutable_reference_write_through.scpp  reborrow_allows_read_through_lender_while_live.scpp  reborrow_further_reborrow_from_lender_while_live_is_rejected.scpp  reborrow_lender_becomes_usable_again_after_last_child_use.scpp  reborrow_write_through_lender_while_live_is_rejected.scpp  reference_to_struct_field_mutates_caller.scpp  shared_and_mutable_borrow_conflict_is_rejected.scpp  shared_references_coexist.scpp  two_mutable_borrows_conflict_is_rejected.scpp  whole_root_conservative_borrow_of_two_fields_conflicts.scpp  writing_through_const_reference_parameter_is_rejected.scpp
blackbox_test/cases/05_span/: span_bounds_check_aborts_by_default.scpp  span_bounds_check_aborts_even_in_main_with_no_annotation.scpp  span_bounds_check_aborts_in_safe_function.cpp  span_bounds_check_skipped_inside_unsafe_block.scpp  span_construction_indexing_and_size.cpp  span_passed_by_value_still_aliases_underlying_array.scpp  span_reassignment_is_rejected.scpp
blackbox_test/cases/06_unsafe_blocks/: calling_extern_c_function_allowed_inside_unsafe_block.scpp  calling_extern_c_function_requires_unsafe_block_is_rejected.scpp  (+17 more)
libs/: CMakeLists.txt  README.md  README.zh.md  scpp.toml
libs/llvm/: CMakeLists.txt  analysis.cpp  analysis.scpp  core.cpp  core.scpp  debug_info.cpp  debug_info.scpp  llvm.cpp  llvm.scpp  native_target_init.cpp  native_target_init.scpp  scpp.toml  target.cpp  target.scpp  target_machine.cpp  target_machine.scpp  types.cpp  types.scpp
libs/scpp/: scpp.scpp  scpp.toml
libs/scpp_llvm/: scpp.toml  scpp_llvm.scpp
libs/std/: scpp.toml  std.scpp
stdlib/: CMakeLists.txt  README.md  README.zh.md  std.cpp  std.scpp
stdlib/cstdlib/: std_cstdlib.scpp
stdlib/expected/: scpp_expected_wrapper.cpp  std_expected.scpp
stdlib/format/: std_format.scpp
stdlib/functional/: std_functional.cpp
stdlib/io/: scpp_io_wrapper.cpp  scpp_io_wrapper.h  std_io.scpp
stdlib/memory/: std_memory.cpp  std_memory.scpp
stdlib/print/: std_print.scpp
stdlib/rand/: scpp_rand.scpp
stdlib/random/: scpp_random_wrapper.cpp  std_random.scpp
stdlib/string/: CMakeLists.txt  README.md  String.cpp  concat.cmake  demo.cpp  expected_output.txt  scpp_string_wrapper.cpp  scpp_string_wrapper.h  std.cpp  std_string.cpp  std_string.scpp
stdlib/thread/: std_thread.scpp
(+1909 files in other folders)
